[project]
name = "redbus-scrapper"
version = "1.0.0"
description = "A Python project to scrape bus ticket fares from RedBus for building a dynamic pricing module"
authors = [
    { name = "RedBus Scraper Team" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["webscraping", "redbus", "dynamic-pricing", "mongodb", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "playwright==1.40.0",
    "beautifulsoup4==4.12.2",
    "requests==2.31.0",
    "pandas==2.1.3",
    "python-dotenv==1.0.0",
    "lxml==4.9.3",
    "fake-useragent==1.4.0",
    "pymongo==4.6.0",
    "motor==3.3.2",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
    "black",
    "isort",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
redbus-scraper = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"